[docs] Avoid collapse button overlapping on release menu (#15635)

--- a/docs/assets/scss/_dropdown_list.scss
+++ b/docs/assets/scss/_dropdown_list.scss
@@ -100,11 +100,16 @@
 
       .dropdown-menu {
         width: 100%;
+        transform:translate3d(0px, 38px, 0px)!important;
       }
     }
 
     @media (min-width: 992px) {
       display: none;
+    }
+    @media (max-width: 991px) and (min-width: 768px) {
+      margin-top: 18px;
+      width: calc(100% - 85px);
     }
   }
 }
